HEEDLS-918 Fixed spacing between applied filter tags and clear filter button when js is enabled but JavascriptSearchSortFilterPaginateItemLimit is exceeded

--- a/DigitalLearningSolutions.Web/Styles/shared/searchableElements/filter.scss
+++ b/DigitalLearningSolutions.Web/Styles/shared/searchableElements/filter.scss
@@ -93,10 +93,6 @@
   flex: 1;
   margin-right: 5px;
 
-  .js-enabled & {
-    margin-right: 0;
-  }
-
   @include mq($until: tablet) {
     width: 100%;
   }
@@ -117,10 +113,4 @@
   padding-top: 11px;
   padding-bottom: 11px;
   margin-bottom: 4px;
-
-  #js-styling-hidden-area-while-loading & {
-    .js-enabled & {
-      margin-right: 5px;
-    }
-  }
 }
